# CGDIproject

./: .gitmodules  CMakeLists.txt  README.md  makefile
cmake/: imgui.cmake
src/: CMakeLists.txt  main.cpp  seamCarving.cpp  seamCarving.h  settings.h  utils.cpp
